--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,7 @@
 {erl_opts, [debug_info]}.
 {deps, []}.
 
-
+{plugins, [rebar3_hex]}.
 {profiles, [{dev,
              [{deps, [
                       {edown,
@@ -13,5 +13,5 @@
                            {packages, false},
                            {subpackages, true},
                            {top_level_readme,
-                            {"./README.md", "http://github.com/barrel/erlang-lru"}}]}
+                            {"./README.md", "http://github.com/barrel-db/erlang-lru"}}]}
              ]}]}.
