use the docs profile for edoc
fix #1

--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
 {deps, []}.
 
 {plugins, [rebar3_hex]}.
-{profiles, [{dev,
+{profiles, [{docs,
              [{deps, [
                       {edown,
                        {git, "https://github.com/uwiger/edown.git",
